--- a/PubSubEngine/Common/Common.vcxproj
+++ b/PubSubEngine/Common/Common.vcxproj
@@ -139,11 +139,19 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="client.h" />
+    <ClInclude Include="error.h" />
     <ClInclude Include="framework.h" />
+    <ClInclude Include="logging.h" />
+    <ClInclude Include="message.h" />
     <ClInclude Include="pch.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="client.cpp" />
     <ClCompile Include="Common.cpp" />
+    <ClCompile Include="error.cpp" />
+    <ClCompile Include="logging.cpp" />
+    <ClCompile Include="message.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
